--- a/app/views/spree/admin/redirects/index.html.erb
+++ b/app/views/spree/admin/redirects/index.html.erb
@@ -1,47 +1,62 @@
-<%= render :partial => 'spree/admin/shared/configuration_menu' %>
-
-<h1>Listing Redirects</h1>
-
-<table class="index">
-  <thead>
-	<tr>
-    	<th><%= sort_link @search, :old_url,  t('redirect.old_url') %></th>
-    	<th><%= sort_link @search, :new_url, t('redirect.new_url') %></th>
-    	<th><%= t('action') %></th>
-	</tr>
-  </thead>
-  <tbody>
-    <%- @collection.each do |redirect|%>
-    <tr id="<%= dom_id redirect %>">
-      <td><%= redirect.old_url %></td>
-      <td><%= redirect.new_url %></td>
-      <td>
-      	<%= link_to_edit redirect %> &nbsp;
-      	<%= link_to_delete redirect %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= paginate @collection %>
-
-<div id="new_redirect_form"></div>
-<br/>
-<p>
-  <%= link_to icon('add') + ' ' + t(".new_redirect"), new_admin_redirect_url, :id => "new_redirect_link" %>
-</p>
-
-<% content_for :head do %>
-  <script type="text/javascript">
-    jQuery(document).ready(function(){  
-      
-      jQuery('#new_redirect_link').click(function(event) { 
-        event.preventDefault();
-        jQuery(this).hide();
-        jQuery.ajax({type: 'GET', url: this.href, data: ({authenticity_token: AUTH_TOKEN}), success: function(r){ jQuery('#new_redirect_form').html(r);} });
-      });
-      
-    });
-  </script>
+<% content_for :page_title do %>
+  Listing Redirects
 <% end %>
+
+<div class='row'>
+
+  <div class="col-md-12">
+    <table class='table'>
+      <thead>
+    	<tr>
+        	<th><%= sort_link @search, :old_url,  t('redirect.old_url') %></th>
+        	<th><%= sort_link @search, :new_url, t('redirect.new_url') %></th>
+        	<th><%= t('action') %></th>
+    	</tr>
+      </thead>
+      <tbody>
+        <%- @collection.each do |redirect|%>
+        <tr id="<%= dom_id redirect %>">
+          <td><%= redirect.old_url %></td>
+          <td><%= redirect.new_url %></td>
+          <td>
+          	<%= link_to_edit redirect %> &nbsp;
+          	<%= link_to_delete redirect %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+</div>
+
+<div class='row'>
+  <div class="col-md-12">
+    <%= paginate @collection %>
+  </div>
+</div>
+
+
+<div class='row'>
+  <div class="col-md-12">
+    <div id="new_redirect_form"></div>
+    <br/>
+    <p>
+      <%= link_to icon('add') + ' ' + t(".new_redirect"), new_admin_redirect_url, :id => "new_redirect_link" %>
+    </p>
+
+    <% content_for :head do %>
+      <script type="text/javascript">
+        jQuery(document).ready(function(){  
+          
+          jQuery('#new_redirect_link').click(function(event) { 
+            event.preventDefault();
+            jQuery(this).hide();
+            jQuery.ajax({type: 'GET', url: this.href, data: ({authenticity_token: AUTH_TOKEN}), success: function(r){ jQuery('#new_redirect_form').html(r);} });
+          });
+          
+        });
+      </script>
+    <% end %>
+  </div>
+</div>
