HH-165 Updating form style

--- a/app/views/spree/admin/redirects/_form.html.erb
+++ b/app/views/spree/admin/redirects/_form.html.erb
@@ -1,11 +1,15 @@
-<%= form.field_container :old_url do %>
-  <%= form.label :old_url, t('old_url') %><br />
-  <%= form.text_field :old_url, :class => 'text' %>
-  <%= error_message_on :redirect, :old_url %>
-<% end %>
+<div data-hook="admin_redirect_form_new_url">
+  <%= f.field_container :old_url, class: ['form-group'] do %>
+    <%= f.label :old_url, raw(Spree.t(:old_url) + content_tag(:span, ' *', class: 'required')) %>
+    <%= f.text_field :old_url, class: 'form-control title' %>
+    <%= f.error_message_on :old_url %>
+  <% end %>
+</div>      
 
-<%= form.field_container :new_url do %>
-  <%= form.label :new_url, t('new_url') %><br />
-  <%= form.text_field :new_url, :class => 'text' %>
-  <%= error_message_on :redirect, :new_url %>
-<% end %>
+<div data-hook="admin_redirect_form_new_url">
+  <%= f.field_container :new_url, class: ['form-group'] do %>
+    <%= f.label :new_url, raw(Spree.t(:new_url) + content_tag(:span, ' *', class: 'required')) %>
+    <%= f.text_field :new_url, class: 'form-control title' %>
+    <%= f.error_message_on :new_url %>
+  <% end %>
+</div>
