--- a/app/views/spree/admin/redirects/edit.html.erb
+++ b/app/views/spree/admin/redirects/edit.html.erb
@@ -1,12 +1,21 @@
-<%= render :partial => 'spree/admin/shared/configuration_menu' %>
 
-<h1>Edit Redirect</h1>
-
-<%= render 'spree/shared/error_messages', :target => @redirect %>
-
-<%= form_for([:admin, @redirect]) do |f| %>
-  <%= render "form", :form => f %>
-  <p class="form-buttons">
-    <%= button t("update") %> <%= t('or') %> <%= link_to t('cancel'), collection_url %>
-  </p>
+<% content_for :page_title do %>
+  Edit Redirect
 <% end %>
+
+<div class='row'>
+
+  <div class="col-md-12">
+
+    <%= render 'spree/shared/error_messages', :target => @redirect %>
+
+    <%= form_for([:admin, @redirect]) do |f| %>
+      <%= render "form", :f => f %>
+      <p class="form-buttons">
+        <%= button t("update") %> <%= t('or') %> <%= link_to t('cancel'), collection_url %>
+      </p>
+    <% end %>
+
+  </div>
+
+</div>
