--- a/app/views/spree/admin/redirects/new.html.erb
+++ b/app/views/spree/admin/redirects/new.html.erb
@@ -1,11 +1,9 @@
-<%= render :partial => 'spree/admin/shared/configuration_menu' unless request.xhr? %>
-
 <h3><%= t '.new_redirect' %></h3>
 
 <%= render 'spree/shared/error_messages', :target => @redirect %>
 
 <%= form_for([:admin, @redirect]) do |f| %>
-  <%= render "form", :form => f %>
+  <%= render "form", :f => f %>
   <p class="form-buttons">
     <%= button t('create') %> <%= t('or') %> <%= link_to t('cancel'), collection_url %>
   </p>
